Fixing MDX errors

--- a/src/content/docs/providers/operations/performance-monitoring.mdx
+++ b/src/content/docs/providers/operations/performance-monitoring.mdx
@@ -62,7 +62,7 @@ Sustained temperatures above throttling thresholds reduce performance and earnin
 - Monitor through **Dashboard → Containers → GPU Monitor**
 - Efficient allocation: `85-95%` during active rentals
 - Memory leaks: Usage remains high between rentals
-- Clean state: `<500MB` usage when idle
+- Clean state: Less than 500MB usage when idle
 
 **System RAM Impact:**
 - AI workloads: `16-32GB` recommended
