Changed podman url to accuracy

--- a/src/content/docs/providers/installation/linux/container-runtime/podman-nvidia.mdx
+++ b/src/content/docs/providers/installation/linux/container-runtime/podman-nvidia.mdx
@@ -111,7 +111,7 @@ podman run -d \
   --network=host \
   -v /opt/gpuflow:/data:Z \
   -e GPUFLOW_API_KEY="get-from-dashboard" \
-  ghcr.io/gpuflow/provider:latest
+  docker.io/gpuflow/universal:latest
 ```
 
 Check the provider status:
